<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="25dp"
        android:contentDescription="@string/cancel"
        android:src="@mipmap/exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/select_mode" />

        <Spinner
            android:id="@+id/spinner_device_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btn_send_mode"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:padding="5dp"
            android:text="@string/send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_xml"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:text="@string/senect_xml" />

        <Spinner
            android:id="@+id/spinner_select_line"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btn_send_xml"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:padding="5dp"
            android:text="@string/send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/select_start" />

        <Spinner
            android:id="@+id/spinner_select_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/select_end" />

        <Spinner
            android:id="@+id/spinner_select_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select" />

        <Button
            android:id="@+id/btn_send_start_end"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:padding="5dp"
            android:text="@string/send" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_start_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_shape"
        android:text="@string/action_start_test" />
</LinearLayout>
